--- a/switch/nous-a1-relay-toggle-red.yaml
+++ b/switch/nous-a1-relay-toggle-red.yaml
@@ -1,12 +1,10 @@
 switch:
-  - platform: template
+  - platform: gpio
+    pin: GPIO15
     name: "${upper_devicename} - Switch"
     icon: mdi:power
-    optimistic: true
     id: button_switch
-    turn_on_action:
-      - switch.turn_on: relay
+    on_turn_on:
       - light.turn_on: light_red
-    turn_off_action:
-      - switch.turn_off: relay
+    on_turn_off:
       - light.turn_off: light_red
