--- a/wifi-fallback.yaml
+++ b/wifi-fallback.yaml
@@ -3,5 +3,9 @@ wifi:
   ap:
     ssid: "$devicename Fallback Hotspot"
     password: $wifi_fallback_password
+    manual_ip:
+      static_ip: 192.168.0.1
+      gateway: 192.168.0.1
+      subnet: 255.255.255.0
 
 captive_portal:
