--- a/device_base/nous-a1.yaml
+++ b/device_base/nous-a1.yaml
@@ -1,8 +1,9 @@
 esphome:
   name: $devicename
-  platform: ESP8266
+
+esp8266:
   board: esp8285
-  esp8266_restore_from_flash: true
+  restore_from_flash: true
 
 # Enable logging
 logger:
