--- a/switch/nous-a1-relay.yaml
+++ b/switch/nous-a1-relay.yaml
@@ -1,4 +1,7 @@
 switch:
   - platform: gpio
     pin: GPIO15
-    id: relay
+    name: "${upper_devicename} Switch"
+    icon: mdi:power
+    id: button_switch
+    restore_mode: RESTORE_DEFAULT_OFF
