--- a/sensor/status.yaml
+++ b/sensor/status.yaml
@@ -1,15 +1,15 @@
 text_sensor:
   - platform: version
-    name: "${upper_devicename} - Version"
-    icon: mdi:cube-outline
+    name: "${upper_devicename} Version"
+    icon: mdi:cube
 
 binary_sensor:
   - platform: status
-    name: "${upper_devicename} - Status"
+    name: "${upper_devicename} Status"
     device_class: connectivity
 
 sensor:
   - platform: uptime
-    name: "${upper_devicename} - Uptime"
+    name: "${upper_devicename} Uptime"
     update_interval: 60s
-    icon: mdi:clock-outline
+    icon: mdi:clock
